--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ crash.log
 # .tfvars files are managed as part of configuration and so should be included in
 # version control.
 #
-# example.tfvars
+*.tfvars
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
@@ -21,6 +21,9 @@ override.tf.json
 *_override.tf
 *_override.tf.json
 
+# ignore CLI config files
+.terraformrc
+terraform.rc
 # Include override files you do wish to add to version control using negated pattern
 #
 # !example_override.tf
